# Rock

./: Cargo.toml
crates/rock_core/: Cargo.toml
crates/rock_core/src/: cli.rs
crates/rock_network/: Cargo.toml
crates/rock_network/src/: network_handler.rs
crates/rock_server/: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
